scrollbar issue is fixed

--- a/src/components/overwriteEditor.css
+++ b/src/components/overwriteEditor.css
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   height: 10%;
-  border-radius:4px 4px 0px 0px;
+  border-radius: 4px 4px 0px 0px;
 }
 
 /* Editor  container */
@@ -39,20 +39,20 @@
 }
 
 .sun-editor .se-wrapper-inner {
-  min-height: 408px;
+  min-height: 408px !important;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
   height: 100%;
 }
 .sun-editor .se-container {
   height: 100%;
-  
 }
 .sun-editor .se-wrapper {
   overflow: auto;
   height: 90%;
   overflow-x: hidden;
-  border-left:1px solid #b1b1b1 ;
-  border-right:1px solid #b1b1b1 ;
-
+  border-left: 1px solid #b1b1b1;
+  border-right: 1px solid #b1b1b1;
 }
 
 .sun-editor-editable p {
@@ -74,6 +74,7 @@
   }
   .sun-editor .se-wrapper {
     height: 81%;
+    overflow: auto;
   }
 }
 @media screen and (max-width: 792px) {
@@ -82,6 +83,7 @@
   }
   .sun-editor .se-wrapper {
     height: 72%;
+    overflow: auto;
   }
 }
 @media screen and (max-width: 586px) {
@@ -90,6 +92,7 @@
   }
   .sun-editor .se-wrapper {
     height: 64%;
+    overflow: auto;
   }
 }
 @media screen and (max-width: 306px) {
@@ -98,5 +101,6 @@
   }
   .sun-editor .se-wrapper {
     height: 58%;
+    overflow: auto;
   }
 }
